[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "gadopt_demo_utils"
version = "0.0.1"
authors = [
  { name = "G-ADOPT Contributors" }
]
description = "Demo utilites for G-ADOPT"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "imageio",
  "pandas",
  "pyvista",
  "shapely",
  "vtk",
]


[tool.setuptools]
packages = ["gadopt_demo_utils",]

[tool.setuptools_scm]
